[package]
name = "actix_header"
version = "0.1.3"
edition = "2021"
description = "shortcut to implement actix-web headers"
license = "MIT"
author = "wangjun861205"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = { version= "1.0.99", features=["full"]}
quote = "1.0.21"
proc-macro2 = "1.0.43"
